--- a/API_PUCCOINS/Views/Shared/_Layout.cshtml
+++ b/API_PUCCOINS/Views/Shared/_Layout.cshtml
@@ -18,11 +18,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("PucCoins", "Index", "Paginas", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Início", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Minhas Moedas", "MinhasMoedas", "Paginas", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Transferencias", "Transferencias", "Paginas", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Relatorio", "Relatorio", "Paginas", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
